# DataStr

./: .gitignore  CMakeLists.txt  Сборка вместе с библиотекой runtime.txt
01/: main.cpp
01/classes/: resultOptions.h  stack.h
02/: input.txt  main.cpp  output.txt  tree.txt
02/classes/: tree.h
03/: 03.sln  03.vcxproj  input1.txt  main.cpp  Мы пойдем другим путем(решение на простом примере).doc
03/Tests/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt
04/: 04.sln  04.vcxproj  main.cpp
04/Tests/: input.txt
